--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <div id="southPanel">
   <div id="total">合計: 0</div>
-  <div id="required">必要ライト: 2055（15キャンドル）</div>
+  <div id="required">必要ライト: 2055（15キャンドル） (16)2268  (17)2481  (18)2719  (19)3207  (20)4195</div>
 </div>
 
 <script>
