--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
     font-family: 'Baloo 2', cursive;
     background: linear-gradient(135deg, #fdfbff 0%, #eef5ff 40%, #fdf6ff 100%);
     margin: 0;
-    padding: 24px 12px;
+    padding: 24px 12px 140px; /* 下に余白を増やして固定カードと被らないように */
     color: #222;
-    padding-bottom: 170px; /* 下部固定カードの分だけ余白を確保 */
   }
 
   .app {
@@ -66,7 +65,11 @@
     margin-bottom: 18px;
     box-shadow: 0 6px 18px rgba(70, 90, 150, 0.22);
     border: 2px solid rgba(210, 220, 255, 0.9);
+    position: relative;
+    overflow: hidden;
   }
+
+  .category-inner { position: relative; z-index: 1; }
 
   .category-header {
     display: flex;
@@ -78,8 +81,10 @@
   .category-label {
     font-size: 20px;
     font-weight: 600;
+    color: #222;
   }
 
+  /* カテゴリ全体ON/OFFトグル */
   .category-toggle {
     appearance: none;
     width: 20px;
@@ -88,22 +93,25 @@
     border: 2px solid #ff9b42;
     cursor: pointer;
     transition: 0.2s;
+    background: #ffffff;
   }
 
   .category-toggle:checked {
     background: linear-gradient(135deg, #ffb36b, #ff9b42);
-    box-shadow: 0 0 8px #ffcf8b;
+    border-color: #ff9b42;
   }
 
-  /* アイテム配置 */
+  /* PCでは4列 */
   .items {
     display: grid;
     grid-template-columns: repeat(4, minmax(0, 1fr));
     gap: 8px;
   }
+
+  /* スマホは3列 */
   @media (max-width: 720px) {
     .items {
-      grid-template-columns: repeat(3, minmax(0, 1fr));
+      grid-template-columns: repeat(3, minmax(0,1fr));
     }
   }
 
@@ -120,7 +128,7 @@
   }
 
   .check-wrapper:hover {
-    box-shadow: 0 4px 10px rgba(149, 177, 255, 0.35);
+    box-shadow: 0 4px 10px rgba(149, 177, 255, 0.25);
     transform: translateY(-1px);
   }
 
@@ -130,14 +138,14 @@
     height: 18px;
     border: 2px solid #87bfff;
     border-radius: 50%;
-    transition: 0.25s;
+    transition: 0.2s;
+    background: #ffffff;
   }
 
+  /* ★ チェック時は単色。光のぼやけ無し */
   .check-input:checked {
-    background: radial-gradient(circle, #6db3ff, #3a8cff 60%, #2d6fe0 100%);
-    box-shadow: 0 0 8px #6db3ff;
+    background: #3a8cff;
     border-color: #3a8cff;
-    transform: scale(1.15);
   }
 
   .item-name { flex: 1; font-size: 14px; }
@@ -151,7 +159,7 @@
     color: #2250a6;
   }
 
-  /* リセットボタン */
+  /* リセット行 */
   .reset-row {
     display: flex;
     justify-content: flex-end;
@@ -167,47 +175,60 @@
     border: none;
     font-size: 15px;
     font-weight: 600;
+    box-shadow: none;          /* ★ ぼやけ削除 */
+    transition: 0.2s;
   }
 
   #resetButton:hover {
     background: linear-gradient(135deg, #ff7676, #ff5252);
+    box-shadow: none;          /* ★ hover時もぼやけ無し */
   }
 
-  /* ★★ 下部固定カード（追従 + 半透明 + 丸角）★★ */
+  /* ★ 画面下に固定される合計カード（半透明） */
   #southPanel {
     position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 16px;
+    width: calc(100% - 24px);
+    max-width: 960px;
 
-    background: rgba(255, 255, 255, 0.85); /* 半透明 */
-    backdrop-filter: blur(10px);
+    background: rgba(255, 255, 255, 0.82);
+    backdrop-filter: blur(12px);
+    border-radius: 20px;
+    padding: 14px 20px;
+    box-shadow: 0 8px 24px rgba(60, 80, 150, 0.35);
+    border: 1px solid rgba(150, 170, 240, 0.9);
 
-    border-radius: 20px 20px 0 0;
-    padding: 18px 22px 26px;
-
-    box-shadow: 0 -4px 25px rgba(60, 80, 150, 0.25);
-    border: 1px solid rgba(150, 170, 240, 0.6);
-
-    z-index: 9999;
+    z-index: 1000;
   }
 
   #total {
-    font-size: 28px;
+    font-size: 26px;
     font-weight: 700;
     color: #2d3a80;
+    margin-bottom: 4px;
   }
 
-  /* ★ 合計が更新されたとき光るアニメーション */
-  @keyframes flash {
-    0% { text-shadow: 0 0 12px rgba(255, 210, 80, 0.8); color: #ffcf42; }
-    100% { text-shadow: none; color: #2d3a80; }
+  /* ★ 合計値が変わったときの光るアニメーション */
+  @keyframes totalFlash {
+    0% {
+      text-shadow: 0 0 0 rgba(255, 210, 120, 0);
+      color: #2d3a80;
+    }
+    40% {
+      text-shadow: 0 0 14px rgba(255, 220, 150, 1);
+      color: #d28a2b;
+    }
+    100% {
+      text-shadow: 0 0 0 rgba(255, 210, 120, 0);
+      color: #2d3a80;
+    }
   }
 
-  .flash {
-    animation: flash 0.6s ease-out;
+  #total.flash {
+    animation: totalFlash 0.6s ease-out;
   }
-
 </style>
 </head>
 <body>
@@ -216,18 +237,23 @@
   <!-- タイトルカード -->
   <div class="header-card">
     <div class="title-with-icon">
-      <img src="candle.png" class="title-icon">
-      <div class="page-title">キャンドル計算機</div>
+      <img src="candle.png" class="title-icon" alt="">
+      <div>
+        <div class="page-title">キャンドル計算機</div>
+        <div class="page-subtitle"></div>
+      </div>
     </div>
   </div>
 
+  <!-- 全てリセットボタン -->
   <div class="reset-row">
     <button id="resetButton">全てリセット</button>
   </div>
 
+  <!-- メイン -->
   <div id="mainPanel"></div>
 
-  <!-- 下部固定カード -->
+  <!-- 画面下に固定される合計カード -->
   <div id="southPanel">
     <div id="total">合計: 0</div>
     <div id="required">必要ライト: <b>2055（15キャンドル）</b></div>
@@ -278,19 +304,20 @@ const sundayValues = [
   [0,0]
 ];
 
-/* 日曜判定 */
+/* 曜日判定（0 = 日曜） */
 const isSunday = new Date().getDay() === 0;
 
-/* 今日使う値 */
+/* 今日使用する値セット */
 let activeValues = isSunday ? sundayValues : values;
 
 /* --------------------------
-   UI生成
+   UI構築
 --------------------------- */
 
 const mainPanel = document.getElementById("mainPanel");
 const totalLabel = document.getElementById("total");
 let checkBoxes = [];
+let lastTotal = 0;
 
 categories.forEach((cat,i)=>{
   const catDiv = document.createElement("div");
@@ -302,6 +329,7 @@ categories.forEach((cat,i)=>{
   const header = document.createElement("div");
   header.className = "category-header";
 
+  // ★ カテゴリ全体ON/OFFトグル
   const toggle = document.createElement("input");
   toggle.type = "checkbox";
   toggle.className = "category-toggle";
@@ -365,12 +393,7 @@ categories.forEach((cat,i)=>{
   mainPanel.appendChild(catDiv);
 });
 
-/* --------------------------
-   合計計算（変更時に光る）
---------------------------- */
-
-let lastTotal = 0;
-
+/* 計算＋合計の光るアニメーション */
 function updateTotal(){
   let total = 0;
   checkBoxes.forEach(row =>
@@ -379,13 +402,12 @@ function updateTotal(){
 
   totalLabel.textContent = "合計: " + total;
 
-  if(total !== lastTotal){
+  if (total !== lastTotal) {
     totalLabel.classList.remove("flash");
-    void totalLabel.offsetWidth; /* アニメ再発火 */
+    void totalLabel.offsetWidth; // 再描画してから
     totalLabel.classList.add("flash");
+    lastTotal = total;
   }
-
-  lastTotal = total;
 }
 
 updateTotal();
@@ -401,7 +423,6 @@ document.getElementById("resetButton").onclick = ()=>{
   document.querySelectorAll('input.category-toggle').forEach(m => m.checked = false);
   updateTotal();
 };
-
 </script>
 </body>
 </html>
