--- a/index.html
+++ b/index.html
@@ -245,17 +245,17 @@
     </div>
   </div>
 
-  <!-- 全てリセットボタン -->
-  <div class="reset-row">
-    <button id="resetButton">全てリセット</button>
-  </div>
+
 
   <!-- メイン -->
   <div id="mainPanel"></div>
 
   <!-- 画面下に固定される合計カード -->
   <div id="southPanel">
-    <div id="total">合計: 0</div>
+    <div class="total-row">
+      <div id="total">合計: 0</div>
+      <button id="resetButton">全てリセット</button>
+    </div>
     <div id="required">必要ライト: <b>2055（15キャンドル）</b></div>
     <div>(16)2268 / (17)2481 / (18)2719 / (19)3207 / (20)4195</div>
   </div>
