--- a/index.html
+++ b/index.html
@@ -10,14 +10,10 @@
     font-family: 'Baloo 2', cursive;
     background: linear-gradient(135deg, #fdfbff 0%, #eef5ff 40%, #fdf6ff 100%);
     margin: 0;
-    padding: 24px 12px 140px; /* 下に余白を増やして固定カードと被らないように */
+    padding: 24px 12px 140px;
     color: #222;
   }
-
-  .app {
-    max-width: 960px;
-    margin: 0 auto;
-  }
+  .app { max-width: 960px; margin: 0 auto; }
 
   /* タイトルカード */
   .header-card {
@@ -31,31 +27,9 @@
     gap: 14px;
     border: 2px solid rgba(210, 220, 255, 0.9);
   }
-
-  /* タイトルアイコン設定 */
-  .title-with-icon {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-  }
-
-  .title-icon {
-    width: 42px;
-    height: 42px;
-    object-fit: contain;
-    filter: drop-shadow(0 0 4px rgba(255, 190, 90, 0.3));
-  }
-
-  .page-title {
-    font-size: 26px;
-    font-weight: 600;
-    letter-spacing: 0.06em;
-  }
-
-  .page-subtitle {
-    font-size: 13px;
-    opacity: 0.7;
-  }
+  .title-with-icon { display: flex; align-items: center; gap: 10px; }
+  .title-icon { width: 42px; height: 42px; object-fit: contain; filter: drop-shadow(0 0 4px rgba(255, 190, 90, 0.3)); }
+  .page-title { font-size: 26px; font-weight: 600; letter-spacing: 0.06em; }
 
   /* カテゴリカード */
   .category {
@@ -66,191 +40,68 @@
     box-shadow: 0 6px 18px rgba(70, 90, 150, 0.22);
     border: 2px solid rgba(210, 220, 255, 0.9);
     position: relative;
-    overflow: hidden;
   }
+  .category-header { display: flex; align-items: center; gap: 10px; margin-bottom: 12px; }
+  .category-label { font-size: 20px; font-weight: 600; color: #222; }
+  .category-toggle { appearance: none; width: 20px; height: 20px; border-radius: 6px; border: 2px solid #ff9b42; cursor: pointer; transition: 0.2s; background: #fff; }
+  .category-toggle:checked { background: linear-gradient(135deg, #ffb36b, #ff9b42); border-color: #ff9b42; }
 
-  .category-inner { position: relative; z-index: 1; }
+  /* アイテムグリッド */
+  .items { display: grid; grid-template-columns: repeat(4, minmax(0,1fr)); gap: 8px; }
+  @media (max-width:720px){ .items { grid-template-columns: repeat(3, minmax(0,1fr)); } }
+  .check-wrapper { display: flex; align-items: center; gap: 8px; padding: 6px 10px; cursor: pointer; border-radius: 999px; background: rgba(248,251,255,0.95); border: 1px solid rgba(185,211,255,0.6); transition: 0.18s; }
+  .check-wrapper:hover { box-shadow:0 4px 10px rgba(149,177,255,0.25); transform: translateY(-1px); }
+  .check-input { appearance:none; width:18px; height:18px; border:2px solid #87bfff; border-radius:50%; background:#fff; transition:0.2s; }
+  .check-input:checked { background:#3a8cff; border-color:#3a8cff; }
+  .item-name{ flex:1; font-size:14px; }
+  .item-value{ font-size:12px; padding:2px 8px; border-radius:999px; background: rgba(61,138,255,0.08); border:1px solid rgba(61,138,255,0.25); color:#2250a6; }
 
-  .category-header {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    margin-bottom: 12px;
-  }
-
-  .category-label {
-    font-size: 20px;
-    font-weight: 600;
-    color: #222;
-  }
-
-  /* カテゴリ全体ON/OFFトグル */
-  .category-toggle {
-    appearance: none;
-    width: 20px;
-    height: 20px;
-    border-radius: 6px;
-    border: 2px solid #ff9b42;
-    cursor: pointer;
-    transition: 0.2s;
-    background: #ffffff;
-  }
-
-  .category-toggle:checked {
-    background: linear-gradient(135deg, #ffb36b, #ff9b42);
-    border-color: #ff9b42;
-  }
-
-  /* PCでは4列 */
-  .items {
-    display: grid;
-    grid-template-columns: repeat(4, minmax(0, 1fr));
-    gap: 8px;
-  }
-
-  /* スマホは3列 */
-  @media (max-width: 720px) {
-    .items {
-      grid-template-columns: repeat(3, minmax(0,1fr));
-    }
-  }
-
-  .check-wrapper {
-    display: flex;
-    align-items: center;
-    gap: 8px;
-    padding: 6px 10px;
-    cursor: pointer;
-    border-radius: 999px;
-    background: rgba(248, 251, 255, 0.95);
-    border: 1px solid rgba(185, 211, 255, 0.6);
-    transition: 0.18s;
-  }
-
-  .check-wrapper:hover {
-    box-shadow: 0 4px 10px rgba(149, 177, 255, 0.25);
-    transform: translateY(-1px);
-  }
-
-  .check-input {
-    appearance: none;
-    width: 18px;
-    height: 18px;
-    border: 2px solid #87bfff;
-    border-radius: 50%;
-    transition: 0.2s;
-    background: #ffffff;
-  }
-
-  /* ★ チェック時は単色。光のぼやけ無し */
-  .check-input:checked {
-    background: #3a8cff;
-    border-color: #3a8cff;
-  }
-
-  .item-name { flex: 1; font-size: 14px; }
-
-  .item-value {
-    font-size: 12px;
-    padding: 2px 8px;
-    border-radius: 999px;
-    background: rgba(61, 138, 255, 0.08);
-    border: 1px solid rgba(61, 138, 255, 0.25);
-    color: #2250a6;
-  }
-
-  /* リセット行 */
-  .reset-row {
-    display: flex;
-    justify-content: flex-end;
-    margin: 10px 0 6px;
-  }
-
-  #resetButton {
-    padding: 10px 24px;
-    background: linear-gradient(135deg, #ff8b8b, #ff6b6b);
-    color: white;
-    border-radius: 999px;
-    cursor: pointer;
-    border: none;
-    font-size: 15px;
-    font-weight: 600;
-    box-shadow: none;          /* ★ ぼやけ削除 */
-    transition: 0.2s;
-  }
-
-  #resetButton:hover {
-    background: linear-gradient(135deg, #ff7676, #ff5252);
-    box-shadow: none;          /* ★ hover時もぼやけ無し */
-  }
-
-  /* ★ 画面下に固定される合計カード（半透明） */
+  /* 画面下に固定される合計バー */
   #southPanel {
     position: fixed;
-    left: 50%;
+    left:50%;
     transform: translateX(-50%);
-    bottom: 16px;
+    bottom:16px;
     width: calc(100% - 24px);
-    max-width: 960px;
-
-    background: rgba(255, 255, 255, 0.82);
+    max-width:960px;
+    background: rgba(255,255,255,0.82);
     backdrop-filter: blur(12px);
-    border-radius: 20px;
-    padding: 14px 20px;
-    box-shadow: 0 8px 24px rgba(60, 80, 150, 0.35);
-    border: 1px solid rgba(150, 170, 240, 0.9);
-
-    z-index: 1000;
+    border-radius:20px;
+    padding:14px 20px;
+    box-shadow:0 8px 24px rgba(60,80,150,0.35);
+    border:1px solid rgba(150,170,240,0.9);
+    z-index:1000;
   }
+  .total-row { display:flex; justify-content:space-between; align-items:center; }
+  #total { font-size:26px; font-weight:700; color:#2d3a80; }
+  #resetButton { padding:10px 20px; background:linear-gradient(135deg,#ff8b8b,#ff6b6b); color:white; border-radius:999px; border:none; cursor:pointer; font-weight:600; }
+  #resetButton:hover { background:linear-gradient(135deg,#ff7676,#ff5252); }
 
-  #total {
-    font-size: 26px;
-    font-weight: 700;
-    color: #2d3a80;
-    margin-bottom: 4px;
-  }
-
-  /* ★ 合計値が変わったときの光るアニメーション */
+  /* 合計光るアニメ */
   @keyframes totalFlash {
-    0% {
-      text-shadow: 0 0 0 rgba(255, 210, 120, 0);
-      color: #2d3a80;
-    }
-    40% {
-      text-shadow: 0 0 14px rgba(255, 220, 150, 1);
-      color: #d28a2b;
-    }
-    100% {
-      text-shadow: 0 0 0 rgba(255, 210, 120, 0);
-      color: #2d3a80;
-    }
+    0% { text-shadow:0 0 0 rgba(255,210,120,0); color:#2d3a80; }
+    40%{ text-shadow:0 0 14px rgba(255,220,150,1); color:#d28a2b; }
+    100%{ text-shadow:0 0 0 rgba(255,210,120,0); color:#2d3a80; }
   }
-
-  #total.flash {
-    animation: totalFlash 0.6s ease-out;
-  }
+  #total.flash { animation: totalFlash 0.6s ease-out; }
 </style>
 </head>
 <body>
 <div class="app">
-
-  <!-- タイトルカード -->
+  <!-- タイトル -->
   <div class="header-card">
     <div class="title-with-icon">
       <img src="candle.png" class="title-icon" alt="">
       <div>
         <div class="page-title">キャンドル計算機</div>
-        <div class="page-subtitle"></div>
       </div>
     </div>
   </div>
 
-
-
   <!-- メイン -->
   <div id="mainPanel"></div>
 
-  <!-- 画面下に固定される合計カード -->
+  <!-- 下固定の合計バー（右にリセットボタン） -->
   <div id="southPanel">
     <div class="total-row">
       <div id="total">合計: 0</div>
@@ -259,17 +110,12 @@
     <div id="required">必要ライト: <b>2055（15キャンドル）</b></div>
     <div>(16)2268 / (17)2481 / (18)2719 / (19)3207 / (20)4195</div>
   </div>
-
 </div>
 
 <script>
-/* --------------------------
-   データ定義
---------------------------- */
-
-const categories = ["孤島","草原","雨林","峡谷","捨て地","書庫","その他","ソーシャル"];
-
-const items = [
+/* データ定義 */
+const categories=["孤島","草原","雨林","峡谷","捨て地","書庫","その他","ソーシャル"];
+const items=[
   ["初期エリア","予言者の席窟","水の試練","土の試練","風の試練","火の試練"],
   ["初期エリア","村","谷","8人エリア","鳥の巣","楽園"],
   ["初期エリア","小川","神殿前","晴れ間","神殿","ツリーハウス","地下洞窟"],
@@ -279,9 +125,7 @@ const items = [
   ["ホーム","風の街道","星月夜の砂漠","オフィス"],
   ["シナモン","大キャン4","キャンドル2倍","パン屋","ウニ焼き","闇の欠片"]
 ];
-
-/* 通常値 */
-const values = [
+const values=[
   [200,50,100,105,200,200],
   [55,119,45,99,50,299],
   [45,227,175,42,83,55,57],
@@ -291,9 +135,7 @@ const values = [
   [23,30,140,57],
   [50,200,200,600,300,200]
 ];
-
-/* 日曜値 */
-const sundayValues = [
+const sundayValues=[
   [0,0,0,0,0,0],
   [0,0,0,0,0,0],
   [0,0,0,0,0,0,0],
@@ -303,124 +145,72 @@ const sundayValues = [
   [0,0,0,0],
   [0,0]
 ];
-
-/* 曜日判定（0 = 日曜） */
-const isSunday = new Date().getDay() === 0;
-
-/* 今日使用する値セット */
+const isSunday=new Date().getDay()===0;
 let activeValues = isSunday ? sundayValues : values;
 
-/* --------------------------
-   UI構築
---------------------------- */
-
-const mainPanel = document.getElementById("mainPanel");
-const totalLabel = document.getElementById("total");
-let checkBoxes = [];
-let lastTotal = 0;
+/* UI構築 */
+const mainPanel=document.getElementById("mainPanel");
+const totalLabel=document.getElementById("total");
+let checkBoxes=[];
+let lastTotal=0;
 
 categories.forEach((cat,i)=>{
-  const catDiv = document.createElement("div");
-  catDiv.className = "category";
+  const catDiv=document.createElement("div");
+  catDiv.className="category";
 
-  const inner = document.createElement("div");
-  inner.className = "category-inner";
+  const header=document.createElement("div");
+  header.className="category-header";
 
-  const header = document.createElement("div");
-  header.className = "category-header";
-
-  // ★ カテゴリ全体ON/OFFトグル
-  const toggle = document.createElement("input");
-  toggle.type = "checkbox";
-  toggle.className = "category-toggle";
-
-  toggle.addEventListener("change", ()=>{
-    items[i].forEach((_, j)=>{
-      const cb = checkBoxes[i][j];
-      cb.checked = toggle.checked;
-      localStorage.setItem(cb.id, cb.checked);
+  const toggle=document.createElement("input");
+  toggle.type="checkbox"; toggle.className="category-toggle";
+  toggle.addEventListener("change",()=>{
+    items[i].forEach((_,j)=>{
+      const cb=checkBoxes[i][j]; cb.checked=toggle.checked;
+      localStorage.setItem(cb.id,cb.checked);
     });
     updateTotal();
   });
 
-  const title = document.createElement("label");
-  title.textContent = cat;
-  title.className = "category-label";
+  const title=document.createElement("label");
+  title.textContent=cat; title.className="category-label";
 
-  header.appendChild(toggle);
-  header.appendChild(title);
-  inner.appendChild(header);
+  header.appendChild(toggle); header.appendChild(title);
+  catDiv.appendChild(header);
 
-  const itemsDiv = document.createElement("div");
-  itemsDiv.className = "items";
-
-  checkBoxes[i] = [];
-
+  const itemsDiv=document.createElement("div"); itemsDiv.className="items";
+  checkBoxes[i]=[];
   items[i].forEach((name,j)=>{
-    const wrapper = document.createElement("label");
-    wrapper.className = "check-wrapper";
-
-    const cb = document.createElement("input");
-    cb.type = "checkbox";
-    cb.className = "check-input";
-    cb.id = `cb_${i}_${j}`;
-    cb.dataset.value = activeValues[i][j];
-    cb.checked = localStorage.getItem(cb.id) === "true";
-
-    cb.addEventListener("change",()=>{
-      localStorage.setItem(cb.id, cb.checked);
-      updateTotal();
-    });
-
-    const nameSpan = document.createElement("span");
-    nameSpan.className = "item-name";
-    nameSpan.textContent = name;
-
-    const valueSpan = document.createElement("span");
-    valueSpan.className = "item-value";
-    valueSpan.textContent = `+${cb.dataset.value}`;
-
-    wrapper.appendChild(cb);
-    wrapper.appendChild(nameSpan);
-    wrapper.appendChild(valueSpan);
+    const wrapper=document.createElement("label"); wrapper.className="check-wrapper";
+    const cb=document.createElement("input"); cb.type="checkbox"; cb.className="check-input";
+    cb.id=`cb_${i}_${j}`; cb.dataset.value=activeValues[i][j];
+    cb.checked=localStorage.getItem(cb.id)==="true";
+    cb.addEventListener("change",()=>{ localStorage.setItem(cb.id,cb.checked); updateTotal(); });
+    const nameSpan=document.createElement("span"); nameSpan.className="item-name"; nameSpan.textContent=name;
+    const valueSpan=document.createElement("span"); valueSpan.className="item-value"; valueSpan.textContent=`+${cb.dataset.value}`;
+    wrapper.appendChild(cb); wrapper.appendChild(nameSpan); wrapper.appendChild(valueSpan);
     itemsDiv.appendChild(wrapper);
-
-    checkBoxes[i][j] = cb;
+    checkBoxes[i][j]=cb;
   });
 
-  inner.appendChild(itemsDiv);
-  catDiv.appendChild(inner);
+  catDiv.appendChild(itemsDiv);
   mainPanel.appendChild(catDiv);
 });
 
-/* 計算＋合計の光るアニメーション */
+/* 合計計算＋光るアニメ */
 function updateTotal(){
-  let total = 0;
-  checkBoxes.forEach(row =>
-    row.forEach(cb => { if(cb.checked) total += parseInt(cb.dataset.value); })
-  );
-
-  totalLabel.textContent = "合計: " + total;
-
-  if (total !== lastTotal) {
-    totalLabel.classList.remove("flash");
-    void totalLabel.offsetWidth; // 再描画してから
-    totalLabel.classList.add("flash");
-    lastTotal = total;
-  }
+  let total=0;
+  checkBoxes.forEach(row=>row.forEach(cb=>{ if(cb.checked) total+=parseInt(cb.dataset.value); }));
+  totalLabel.textContent="合計: "+total;
+  if(total!==lastTotal){ totalLabel.classList.remove("flash"); void totalLabel.offsetWidth; totalLabel.classList.add("flash"); lastTotal=total; }
 }
 
+/* 初期合計表示 */
 updateTotal();
 
 /* リセット */
-document.getElementById("resetButton").onclick = ()=>{
-  checkBoxes.forEach(row =>
-    row.forEach(cb => {
-      cb.checked = false;
-      localStorage.setItem(cb.id, false);
-    })
-  );
-  document.querySelectorAll('input.category-toggle').forEach(m => m.checked = false);
+document.getElementById("resetButton").onclick=()=>{
+  checkBoxes.forEach(row=>row.forEach(cb=>{ cb.checked=false; localStorage.setItem(cb.id,false); }));
+  document.querySelectorAll('input.category-toggle').forEach(m=>m.checked=false);
   updateTotal();
 };
 </script>
